-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Dereference null return value
If the function actually returns a null value, a null pointer dereference will occur. Return value of function which returns null is dereferenced without checking
/data/mci/4197827dfd19dfe79142f7d25f6e6f0f/bazel_cache/a1dc365b351479c659b51fd1e7d5df0a/execroot/_main/src/mongo/db/query/planner_analysis.cpp:509: NULL_RETURNS 162818 Dereferencing "query->getProj()", which is known to be "nullptr".