SERVER-108525 assert query contains projection before attempting to add to the solution tree (#39552)

GitOrigin-RevId: 53fc44898d0d2ba51d7f28d23f5f3052e29fe5fe